<resources>
    <string name="app_name">SampleProject</string>
    <string name="voditelj">Voditelj</string>
    <string name="organizator">Organizator</string>
    <string name="povratak">Povratak</string>
    <string name="izvodac">Izvođač</string>
    <string name="title_activity_organizator">OrganizatorActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_download_image">downloadImage</string>
    <string name="menu_postavke">Postavke</string>
    <string name="menu_prop">Propusnica</string>
    <string name="nav_header_subtitle">Aplikacija za organizaranje festivala</string>
    <string name="nav_header_title">Festive</string>
    <string name="nav_header_desc">description</string>
    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="napravi_propusnicu">Napravi propusnicu</string>
    <string name="sign_out">Odjavi se</string>
    <string name="ispi_i_propusnice">Ispiši propusnice</string>
</resources>
