<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_propusnica"
        android:name="com.example.sampleproject.common.PropusnicaFragment"
        android:label="@string/menu_prop"
        tools:layout="@layout/fragment_propusnica" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.sampleproject.voditelj.VoditeljInfo"
        android:label="@string/menu_slideshow"
        />

    <fragment
        android:id="@+id/nav_postavke"
        android:name="com.example.sampleproject.common.PostavkeFragment"
        android:label="@string/menu_postavke"
        tools:layout="@layout/fragment_postavke_fragmet" />



</navigation>